Should solve abstract wrap issue #350

--- a/app/src/css/mx_view_toggle.css
+++ b/app/src/css/mx_view_toggle.css
@@ -142,6 +142,7 @@
   width: 100%;
   border-top: 1px solid var(--mx_ui_border);
   border-bottom: 1px solid var(--mx_ui_border);
+  overflow-wrap: break-word;
 }
 
 .mx-view-item-index,
